# YashBot

./: .dockerignore  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  MIGRATION_TO_GEMINI.md  README.md  READY_TO_DEPLOY.md  app.py  build.sh  main.py  nixpacks.toml  pyproject.poetry.toml  pyproject.toml  render.yaml  requirements.txt  run.py  setup.py  test_setup.py
static/css/: styles.css
static/js/: script.js
templates/: index.html
utils/: document_processor.py  rag_chatbot.py  vector_store.py  web_scraper.py
